--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,16 +5,17 @@
     <title>LearnCenter - Login</title>
 </head>
 <body>
+<div th:insert="header :: header"></div>
 <div th:if="${param.error}">
-    Invalid username and password.
+    Некорректная почта или пароль.
 </div>
 <div th:if="${param.logout}">
-    You have been logged out.
+    Вы вышли.
 </div>
 <form th:action="@{/login}" method="post">
-    <div><label> User Name : <input type="text" name="username"/> </label></div>
-    <div><label> Password: <input type="password" name="password"/> </label></div>
-    <div><input type="submit" value="Sign In"/></div>
+    <div><label>E-mail: <input type="text" name="username"/> </label></div>
+    <div><label>Пароль: <input type="password" name="password"/> </label></div>
+    <div><input type="submit" value="Войти"/></div>
 </form>
 </body>
 </html>
