--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>LearningCenter - Список курсов</title>
+    <title>LearnCenter - Список курсов</title>
 </head>
 <body>
     <div th:insert="header :: (${#httpServletRequest.remoteUser} ? user_header : header)"></div>
