Add button for course creation

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -13,5 +13,8 @@
             <li><a th:href="@{/course/show(id=${course.id})}">[[${course.description}]]</a></li>
         </ul>
     </div>
+    <form th:action="@{/course/create}" method="post">
+        <input type="submit" value="Создать курс"/>
+    </form>
 </body>
 </html>
